# EmailTracker

./: README.md
EmailTracker/: .env.example  .gitignore  README.md  pyproject.toml
EmailTracker/.claude/: settings.local.json
EmailTracker/emailtracker/: auth.py  config.py  db.py  graph_client.py  outlook_reader.py  poller.py
EmailTracker/emailtracker/web/: app.py  routes.py
EmailTracker/emailtracker/web/static/: style.css
EmailTracker/emailtracker/web/templates/: _feed_rows.html  _metrics.html  _rules_panel.html  base.html  dashboard.html  thread.html
