[project]
name = "emailtracker"
version = "0.1.0"
description = "Continuous monitor for a shared Microsoft 365 mailbox with a local web dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "pywin32>=308; sys_platform == 'win32'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["emailtracker*"]
